--- a/signup.html
+++ b/signup.html
@@ -2,44 +2,50 @@
 <html>
 <head>
 
-  <title>Portfolio</title>
-  <meta name="description" content="My portfolio.">
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Chirp Chirp Sign Up</title>
+    <meta name="description" content="Signup!">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+    <link rel="stylesheet" href="signup.css">
+
 </head>
+
 <body>
   <div class="container">
-    <h1>Create A New Chirp Profile</h1>
-    <form method="post" action="https://923ad329.ngrok.io/users" enctype="multipart/form-data">
+    <div class="text-center">
+        <h1>ya ready to chirp?</h1>
+    </div>
 
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" name="name" required />
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="text" class="form-control" id="email" name="email" required />
-      </div>
-      <div class="form-group">
-        <label for="userpic">Profile Picture</label>
-        <input type="text" class="form-control" id="userpic" name="userpic" required />
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="text" class="form-control" id="password" name="password" required />
-      </div>
+    <form method="post" action="#">
 
-      <button type="submit" class="btn btn-success">Click here to start Chirping !</button>
+        <div class="signupInputArea text-center">
+            <div class="form-group">
+                <label for="name">name</label>
+                <input type="text" class="form-control" id="name" name="name" required />
+            </div>
+            <div class="form-group">
+                <label for="email">email</label>
+                <input type="text" class="form-control" id="email" name="email" required />
+            </div>
+            <div class="form-group">
+                <label for="password">password</label>
+                <input type="text" class="form-control" id="password" name="password" required />
+            </div>
+            <div class="form-group">
+                <label for="userpic">picture</label>
+                <input type="text" class="form-control" id="userpic" name="userpic" required />
+            </div>
+            <button type="button" id="btnSubmit" class="btn btn-success btn-block">get yo chirp on!</button>
+        </div>
 
     </form>
-  </div>
-  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
-  <script src="main.js"></script>
+    </div>
+    <script src="config.js"></script>
+    <script src="signup.js"></script>
+
 </body>
 </html>
