--- a/timeline.html
+++ b/timeline.html
@@ -1,1 +1,21 @@
-timeline
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <title>NAME THIS PLEASE</title>
+   <meta name="description" content="chirp">
+
+   <meta charset="utf-8">
+   <meta http-equiv="x-ua-compatible" content="ie=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+   <link rel="stylesheet" href="main.css">
+</head>
+<body>
+ <main id="timeline">
+ </main>
+
+ <script src="config.js"></script>
+ <script src="timeline.js"></script>
+</body>
+</html>
