--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,7 @@
                 <label for="userpic">picture</label>
                 <input type="text" class="form-control" id="userpic" name="userpic" required />
             </div>
-            <button type="button" id="btnSubmit" class="btn btn-success btn-block">get yo chirp on!</button>
+            <button type="button" id="btnSignup" class="btn btn-success btn-block">get yo chirp on!</button>
         </div>
 
     </form>
