--- a/timeline.html
+++ b/timeline.html
@@ -11,10 +11,12 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <main id="timeline">
-    </main>
+    <main>
+        <div id="timeline">
 
+        </div>
+    </main>
     <script src="config.js"></script>
-    <script src="timeline.js"></script>
+    <script src="timeline.bundle.js"></script>
 </body>
 </html>
