--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group">
                 <label for="password">password</label>
-                <input type="text" class="form-control" id="password" name="password" required />
+                <input type="password" class="form-control" id="password" name="password" required />
             </div>
 
             <button type="button" id="btnSignin" class="btn btn-success btn-block">get yo chirp on!</button>
