--- a/index.html
+++ b/index.html
@@ -2,28 +2,31 @@
 <html>
 <head>
 
-    <title>Chirp Chirp</title>
-    <meta name="description" content="Chirp Chirp: A Social Network">
+    <title>Chirp</title>
+    <meta name="description" content="Chirp: A Social Network">
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="index.css" />
+
 
 </head>
 <body>
-    <div class="text-right">
+    <img class="logo" src="bird.png" />
+
+    <div class="text-center">
+        <h1>CHIRP</h1>
+        <h3>like twitter, but <b>so much</b> better.</h3>
         <div class="btns">
-            <button class="loginBtn"><a href="./login.html">LOGIN</a></button>
-            <button class="signupBtn"><a href="./signup.html">SIGN UP</a></button>
-            <a href="./timeline.html">Timeline Tester</a>
+            <a href="./login.html"><button class="loginBtn btn btn-default btn-lg">LOGIN</button></a>
+            <a href="./signup.html"><button class="signupBtn btn btn-default btn-lg">SIGN UP</button></a>
         </div>
 
-    </div>
-    <div class="text-center">
-        <img src="./chirp-logo.png" />
     </div>
 </body>
 </html>
