--- a/login.html
+++ b/login.html
@@ -9,33 +9,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="signup.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="login.css">
 
 </head>
 
 <body>
-  <div class="container">
-
-    <form method="post" action="#">
-
-        <div class="signinInputArea text-center">
-            <div class="form-group">
-                <label for="name">name</label>
-                <input type="text" class="form-control" id="name" name="name" required />
+    <div class="text-right signup">
+        <a href="./signup.html">oops, i wanted to <b>sign up</b></a>
+    </div>
+    <div class="container">
+        <form method="post" action="#">
+            <div class="loginInputArea text-center">
+                <a href="./index.html"><img class="logo" src="bird.png" /></a>
+                <div class="form-group">
+                    <label for="name">username</label>
+                    <input type="text" class="form-control" id="name" name="name" required />
+                </div>
+                <div class="form-group">
+                    <label for="password">password</label>
+                    <input type="password" class="form-control" id="password" name="password" required />
+                </div>
+                <button type="button" id="btnSignin" class="btn btn-block">get yo chirp on!</button>
             </div>
-            <div class="form-group">
-                <label for="password">password</label>
-                <input type="password" class="form-control" id="password" name="password" required />
+            <div id="errorMessage">
             </div>
-
-            <button type="button" id="btnSignin" class="btn btn-success btn-block">get yo chirp on!</button>
-        </div>
-        <div id="errorMessage">
-
-        </div>
-
-    </form>
+        </form>
     </div>
     <script src="config.js"></script>
     <script src="login.js"></script>
