working on follow features

--- a/follow.html
+++ b/follow.html
@@ -101,9 +101,9 @@
                 </div>
             </div>
         </div>
-        <div id="follow-me">
-            follow me should be here
-        </div>
+        <!-- <div id="follow-me">
+          //this will be used once the react comp is operational
+        </div> -->
     </main>
     <script src="config.js"></script>
     <!-- <script src="follow.js"></script> -->
